--- a/CudaRaytracer/CudaRaytracer.vcxproj
+++ b/CudaRaytracer/CudaRaytracer.vcxproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MeshPrimitive.h" />
+    <ClInclude Include="OBJLoader.hpp" />
     <ClInclude Include="Ray.hpp" />
     <ClInclude Include="transforms.hpp" />
     <ClInclude Include="TrianglePrimitive.hpp" />
