--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+CudaRaytracer/build/
+CudaRaytracer/meshes/
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
